org.metaborg.lang.tiger.example/tests/binding/binding04.tig
let
  type r = {x : int, x : int, y : int, z : int} // error: duplicate field declaration
in 
  r{x = 1, y = 1, y = 2};
  r{x = 1, y = 1, z = 3}
end